test/conformance/kuttl/validate/clusterpolicy/standard/cel/disallow-host-path/deployment-fail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-fail
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
          - name: udev
            mountPath: /data
      volumes:
      - name: udev
        hostPath:
          path: /etc/udev
